# llm-writer-workshop

./: .env.example  Dockerfile  LICENSE  README.md  app.py  di.py  docker-compose.yml  gemini_chatter.py  mistral_chatter.py  multi_model_writer_workshop.py  openai_chatter.py  pyproject.toml  requirements.txt
.github/workflows/: backend.yml  docker.yml  frontend.yml  main.yml
config/: config.toml
llm_multi_model_workshop/: multi_model_writer_workshop.py
llm_multi_model_workshop/chatter/: gemini_chatter.py
llm_multi_model_workshop/controller/: chat_controller.py
llm_multi_model_workshop/service/: chat_service.py  config_service.py  health_check_service.py
llm_writer_workshop/chatter/: chatter_factory.py  claude_chatter.py  gemini_chatter.py  mistral_chatter.py  openai_chatter.py
llm_writer_workshop/controller/: chat_controller.py  health_check_controller.py
llm_writer_workshop/service/: chat_service.py  config_service.py
service/: Dockerfile  README.md  app.py  di.py  pyproject.toml
service/config/: config.toml
src/: app.py  multi_model_writer_workshop.py
src/chatters/: mistral_chatter.py  openai_chatter.py
src/controllers/: chat_controller.py  health_controller.py
tests/controller/: test_chat_controller.py  test_health_check_controller.py
tests/controllers/: test_health_controller.py
tests/service/: test_chat_service.py  test_config_service.py  test_health_check_service.py
ui/: Dockerfile  package-lock.json  package.json
ui/public/: index.html  manifest.json
ui/src/: App.css  App.test.tsx  App.tsx
ui/src/components/: MainEditor.tsx  (+3 more)
(+15 files in other folders)
